--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,6 +49,9 @@ set -g @plugin 'dracula/tmux'
 # Terminal type configuration
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Session stuff
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
  
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
