--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -78,14 +78,17 @@ scrolling:
   multiplier: 3
 
 # Font configuration (changes require restart)
-font:
+#font:
   # Normal (roman) font face
+  #normal:
+    #family: JetBrains Mono
+    #style: Light
+  #bold:
+    #Font: JetBrains Mono
+    #Style: Regular
+font:
   normal:
-          family: SauceCodePro Nerd Font
-          style: Light
-  bold:
-          Font: Source Code Pro
-          Style: Regular
+    family: "MesloLGS NF"
 
     # Font family
     #
@@ -150,7 +153,7 @@ font:
   #
   # This is a global setting and will require a log out or restart to take
   # effect.
-  use_thin_strokes: true
+  #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -237,7 +240,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+#background_opacity: 1.0
 
 # Mouse bindings
 #
@@ -269,7 +272,7 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
+  #url:
     # URL launcher
     #
     # This program is executed when clicking on a text which is recognized as a URL.
@@ -289,7 +292,7 @@ mouse:
     #
     # These are the modifiers that need to be held down for opening URLs when clicking
     # on them. The available modifiers are documented in the key binding section.
-    modifiers: None
+#modifiers: None
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
@@ -488,6 +491,11 @@ key_bindings:
   #- { key: Q,      mods: Command,         action: Quit             }
   #- { key: W,      mods: Command,         action: Quit             }
   #- { key: F,      mods: Command|Control, action: ToggleFullscreen }
+
+  - { key: Left,     mods: Command, chars: "\x1bOH",   mode: AppCursor   } # Home
+  - { key: Right,    mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
+  - { key: Back, mods: Super, chars: "\x15" } # delete word/line
+
 
   - { key: Paste,                   action: Paste                            }
   - { key: Copy,                    action: Copy                             }
