Change tmux back to dracula

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,6 +34,11 @@ bind C-l send-keys 'C-l'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "kubernetes-context battery weather time"
+set -g @dracula-kubernetes-hide-user true
+set -g @dracula-kubernetes-eks-hide-arn true
+#set -g @plugin 'catppuccin/tmux'
+#set -g @catppuccin_flavour 'mocha'
 
 # Ticker
 #set -g @plugin 'Brutuski/tmux-ticker'
